# Curso-Python-3

./: .gitignore  README.md  assertions.py  aula186.py  calculadora.py  main.py  pyproject.toml  test_bacon_com_ovos.py  test_calculadora.py
PYTHON_TESTES/: calculadora_example.py  pessoa.py  test_baconcomovos.py  test_calculadora.py  test_pessoa.py
PYTHON_TESTES/Testes_Python/: test_baconcomovos.py  test_calculadora.py  test_pessoa.py
PYTHON_TESTES/src/: calculadora.py  main.py  (+2 more)
Secao 06/: BeautifulSoup 4.md  Threads.py  aula162.py  aula163.py  aula164.py  aula169.py  aula172.py  aula173.py  aula174.py  aula177.py  aula180.py  aula181.py  aula185.html  aula187.py  aula188.py  aula189.py  aula191.py  aula192.py  aula194.py  aula198.py  index.html
Seção 05/: TESTE.PY  aula.130.py  aula120.py  aula120_01.py  aula121.py  aula123.py  aula124.py  aula125.py  aula126.py  aula127.json  aula127.py  aula127_1.py  aula128.py  aula129.py  aula131.py  aula132.py  aula133.py  aula134.py  aula135.py  aula136.py  aula137.py  aula138.py  aula139.py  aula140.py  aula142.py  aula143.py  aula144.py  aula145.py  aula146.py  aula147.py  aula148.py  aula149.py  aula150.py  aula151.py  aula152.py  aula153.py  aula154.py  aula155.py  aula157.py  aula159.py  (+5 more)
Seção 06/: .env  .env-example  aula165.py  aula166.py  aula167.py  aula168.py  aula170.py  aula171.py  aula175.py  aula176.py  aula179.py  aula182.py  aula183.py  aula184.py  aula185.py
Seção 17/: Seção17.md
aula206/: .env-example  docker-compose.yml  main.py  main_1.py  main_2.py  main_3.py  main_4.py
aula207_django/: db.sqlite3
(+121 files in other folders)
