[tool.poetry]
name = "curso-python-3"
version = "0.1.0"
description = "Curso de Python 3 Otavio Miranda"
authors = ["Victor Lucas <victorlucas.santos124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytz = "^2025.1"
types-pytz = "^2025.1.0.20250318"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
