[tool.poetry]
name = "curso-python-3"
version = "0.1.0"
description = "Curso de Python 3 Otavio Miranda"
authors = ["Victor Lucas <victorlucas.santos124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytz = "^2025.1"
types-pytz = "^2025.1.0.20250318"
python-dateutil = "^2.9.0.post0"
types-python-dateutil = "^2.9.0.20241206"
notebook = "^7.4.0"
types-requests = "^2.32.0.20250328"
bs4 = "^0.0.2"
selenium = "^4.30.0"
pymysql = "^1.1.1"
types-pymysql = "^1.1.0.20241103"
python-dotenv = "^1.0.1"
cryptography = "^44.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
